# Flatbuffers_Project

./: README.txt  README_SCHEMA.txt
Decoder/: README.txt
Decoder/src/Decoder/: .sample_decoder.py.swp  fb_decoder.py
Decoder/src/Decoder/Cl/: Client.py  Client_Type.py  Clients.py  Group.py  Person.py
Encoder/: CMakeLists.txt  README.txt
Encoder/src/Encoder/: .Client_Schema.fbs.swp  Client_Schema.fbs  Client_Schema_generated.h  fb_encoder.cpp
